@@ -1,7 +1,7 @@
 <atlassian-plugin key="${project.groupId}.${project.artifactId}" name="Schuberg Philis Tableau plugin" plugins-version="2">
     <plugin-info>
         <description>Tableau plugin for confluence</description>
-        <version>0.63</version>
+        <version>0.7</version>
         <vendor name="Schuberg Philis" url="http://www.schubergphilis.com" />
         <param name="configure.url">/admin/plugins/tableau-plugin/configure.action</param>
     </plugin-info>
@@ -22,8 +22,8 @@
         </package>
     </xwork>
 
-    <macro name="tableau-plugin" class="com.schubergphilis.confluence.plugins.TableauMacro" key="tableau-plugin">
-        <description>This macros renders a tableau chart</description>
+    <macro name="tableau-plugin" class="com.schubergphilis.confluence.plugins.TableauMacro" key="tableau-plugin" icon="/download/resources/${project.groupId}.${project.artifactId}:javascript-resources/tableau.png">
+        <description>This macros embeds a tableau view</description>
         <parameters>
             <parameter name="title" type="string"/>
             <parameter name="workbook" type="string"/>
@@ -40,11 +40,13 @@
             <parameter name="noprint" type="boolean" default="false"/>
             <parameter name="refresh" type="boolean" default="false"/>
             <parameter name="parameters" type="string" default=""/>
-
         </parameters>
     </macro>
 
     <web-resource name="javascript-resources" key="javascript-resources">
+        <resource type="download" name="tableau.png" location="images/tableau.png">
+            <param name="content-type" value="image/png"/>
+        </resource>
         <resource type="download" name="chartloader.js" location="js/chartloader.js"/>
         <resource type="download" name="jquery-ui-1.8.13.custom.min.js" location="js/jquery-ui-1.8.13.custom.min.js"/>
         <resource type="download" name="jquery-ui-1.8.13.custom.css" location="redmond/jquery-ui-1.8.13.custom.css"/>
