@@ -1,3 +1,7 @@
+############################## 06/04/2012 v0.7 ###############################
+- added the option to refresh a view ( this will invalidate the cached png )
+- added the tableau icon
+
 ############################## 03/06/2012 v0.63 ###############################
 - bugfix: ampersant missing when using parameters in interactive mode
 - moved code to github
